third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_transfer_borrows_invalid.no-opt.exp

Diagnostics:
error: cannot move local `y` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:16:9
   │
15 │         let r = take_imm_mut_give_mut(move x_ref, move y_ref);
   │                 --------------------------------------------- local `y` previously mutably borrowed here
16 │         move y;
   │         ^^^^^^ move attempted here
17 │         *r = 1;
   │         ------ conflicting reference `r` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:26:9
   │
25 │         let r = take_imm_mut_give_imm(move x_ref, move y_ref);
   │                 --------------------------------------------- local `x` previously borrowed here
26 │         move x;
   │         ^^^^^^ move attempted here
27 │         move y;
28 │         *r;
   │         -- conflicting reference `r` used here

error: cannot move local `y` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:27:9
   │
25 │         let r = take_imm_mut_give_imm(move x_ref, move y_ref);
   │                 --------------------------------------------- local `y` previously borrowed here
26 │         move x;
27 │         move y;
   │         ^^^^^^ move attempted here
28 │         *r;
   │         -- conflicting reference `r` used here
